--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,6 +11,31 @@
     <script src="{{ "/assets/js/dark.js?v=" | append: site.github.build_revision | relative_url }}"></script>
   </head>
   <body>
+<div class="Header clearfix">
+  <!-- Text item -->
+  <div class="Header-item">
+    <div style="margin-bottom: 126px">
+  <details class="dropdown details-reset details-overlay d-inline-block">
+    <summary class="btn" aria-haspopup="true">
+      🌙{% octicon moon height:24 %}
+      <div class="dropdown-caret"></div>
+    </summary>
+
+    <div class="dropdown-menu dropdown-menu-se">
+      <div class="dropdown-header">
+        Select mode
+      </div>
+      <ul>
+        <li>light</li>
+        <li>dark dimmed</li>
+        <li>dark</li>
+      </ul>
+    </div>
+  </details>
+</div>
+  </div>
+</div>
+
     <div class="container-lg px-3 my-5 markdown-body">
       {% if site.title and site.title != page.title %}
       <h1><a href="{{ "/" | absolute_url }}">{{ site.title }}</a></h1>
