--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,7 @@
   </head>
   <body>
 <div class="Header">
-  <div class="Header-item" style="margin-left:auto">
+  <div class="Header-item" style="margin-left=auto">
     <div>
   <details class="dropdown details-reset details-overlay d-inline-block">
     <summary class="btn" aria-haspopup="true">
@@ -20,7 +20,7 @@
       <div class="dropdown-caret"></div>
     </summary>
 
-    <div class="dropdown-menu dropdown-menu-sw">
+    <div class="dropdown-menu dropdown-menu-nw">
       <div class="dropdown-header">
         Select mode
       </div>
