--- a/_sass/github-syntax-dark.scss
+++ b/_sass/github-syntax-dark.scss
@@ -1,14 +1,9 @@
-/*!
- * GitHub Dark v0.5.0
- * Copyright (c) 2012 - 2017 GitHub, Inc.
- * Licensed under MIT (https://github.com/primer/github-syntax-theme-generator/blob/master/LICENSE)
- */
- 
 [data-color-mode="dark"][data-dark-theme="dark"],
 [data-color-mode="dark"][data-dark-theme="dark_dimmed"] {
   embed[type="application/pdf"] {
     filter: invert(90%);
   }
+
   .filter {
     width: 100%;
     height: 100%;
@@ -18,84 +13,270 @@
     pointer-events: none;
     z-index: 2147483647;
   }
+
   .yellow-filter {
     background: rgba(255, 255, 0, 0.15);
     opacity: 0;
   }
+
   .blue-filter {
     background: rgba(0, 0, 255, 0.15);
     opacity: 0;
   }
+
   .dim-filter {
     background: rgba(0, 0, 0, 0.5);
     opacity: 0;
   }
+
   .transform-z {
     transform: translateZ(0px);
   }
-.highlight pre { background-color: #272822; }
-.highlight .hll { background-color: #272822; }
-.highlight .c { color: #75715e } /* Comment */
-.highlight .err { color: #960050; background-color: #1e0010 } /* Error */
-.highlight .k { color: #66d9ef } /* Keyword */
-.highlight .l { color: #ae81ff } /* Literal */
-.highlight .n { color: #f8f8f2 } /* Name */
-.highlight .o { color: #f92672 } /* Operator */
-.highlight .p { color: #f8f8f2 } /* Punctuation */
-.highlight .cm { color: #75715e } /* Comment.Multiline */
-.highlight .cp { color: #75715e } /* Comment.Preproc */
-.highlight .c1 { color: #75715e } /* Comment.Single */
-.highlight .cs { color: #75715e } /* Comment.Special */
-.highlight .ge { font-style: italic } /* Generic.Emph */
-.highlight .gs { font-weight: bold } /* Generic.Strong */
-.highlight .kc { color: #66d9ef } /* Keyword.Constant */
-.highlight .kd { color: #66d9ef } /* Keyword.Declaration */
-.highlight .kn { color: #f92672 } /* Keyword.Namespace */
-.highlight .kp { color: #66d9ef } /* Keyword.Pseudo */
-.highlight .kr { color: #66d9ef } /* Keyword.Reserved */
-.highlight .kt { color: #66d9ef } /* Keyword.Type */
-.highlight .ld { color: #e6db74 } /* Literal.Date */
-.highlight .m { color: #ae81ff } /* Literal.Number */
-.highlight .s { color: #e6db74 } /* Literal.String */
-.highlight .na { color: #a6e22e } /* Name.Attribute */
-.highlight .nb { color: #f8f8f2 } /* Name.Builtin */
-.highlight .nc { color: #a6e22e } /* Name.Class */
-.highlight .no { color: #66d9ef } /* Name.Constant */
-.highlight .nd { color: #a6e22e } /* Name.Decorator */
-.highlight .ni { color: #f8f8f2 } /* Name.Entity */
-.highlight .ne { color: #a6e22e } /* Name.Exception */
-.highlight .nf { color: #a6e22e } /* Name.Function */
-.highlight .nl { color: #f8f8f2 } /* Name.Label */
-.highlight .nn { color: #f8f8f2 } /* Name.Namespace */
-.highlight .nx { color: #a6e22e } /* Name.Other */
-.highlight .py { color: #f8f8f2 } /* Name.Property */
-.highlight .nt { color: #f92672 } /* Name.Tag */
-.highlight .nv { color: #f8f8f2 } /* Name.Variable */
-.highlight .ow { color: #f92672 } /* Operator.Word */
-.highlight .w { color: #f8f8f2 } /* Text.Whitespace */
-.highlight .mf { color: #ae81ff } /* Literal.Number.Float */
-.highlight .mh { color: #ae81ff } /* Literal.Number.Hex */
-.highlight .mi { color: #ae81ff } /* Literal.Number.Integer */
-.highlight .mo { color: #ae81ff } /* Literal.Number.Oct */
-.highlight .sb { color: #e6db74 } /* Literal.String.Backtick */
-.highlight .sc { color: #e6db74 } /* Literal.String.Char */
-.highlight .sd { color: #e6db74 } /* Literal.String.Doc */
-.highlight .s2 { color: #e6db74 } /* Literal.String.Double */
-.highlight .se { color: #ae81ff } /* Literal.String.Escape */
-.highlight .sh { color: #e6db74 } /* Literal.String.Heredoc */
-.highlight .si { color: #e6db74 } /* Literal.String.Interpol */
-.highlight .sx { color: #e6db74 } /* Literal.String.Other */
-.highlight .sr { color: #e6db74 } /* Literal.String.Regex */
-.highlight .s1 { color: #e6db74 } /* Literal.String.Single */
-.highlight .ss { color: #e6db74 } /* Literal.String.Symbol */
-.highlight .bp { color: #f8f8f2 } /* Name.Builtin.Pseudo */
-.highlight .vc { color: #f8f8f2 } /* Name.Variable.Class */
-.highlight .vg { color: #f8f8f2 } /* Name.Variable.Global */
-.highlight .vi { color: #f8f8f2 } /* Name.Variable.Instance */
-.highlight .il { color: #ae81ff } /* Literal.Number.Integer.Long */
 
-.highlight .gh { } /* Generic Heading & Diff Header */
-.highlight .gu { color: #75715e; } /* Generic.Subheading & Diff Unified/Comment? */
-.highlight .gd { color: #f92672; } /* Generic.Deleted & Diff Deleted */
-.highlight .gi { color: #a6e22e; } /* Generic.Inserted & Diff Inserted */
+  .highlight .cm {
+    color: rgb(196, 196, 186);
+  }
+
+  .highlight .cp {
+    color: rgb(191, 191, 191);
+  }
+
+  .highlight .c1 {
+    color: rgb(196, 196, 186);
+  }
+
+  .highlight .cs {
+    color: rgb(191, 191, 191);
+  }
+
+  .highlight .c,
+  .highlight .cd {
+    color: rgb(196, 196, 186);
+  }
+
+  .highlight .err {
+    color: rgb(230, 153, 153);
+    background-color: rgb(75, 47, 47);
+  }
+
+  .highlight .gd {
+    color: rgb(191, 191, 191);
+    background-color: rgb(69, 17, 17);
+  }
+
+  .highlight .ge {
+    color: rgb(191, 191, 191);
+  }
+
+  .highlight .gr {
+    color: rgb(230, 153, 153);
+  }
+
+  .highlight .gh {
+    color: rgb(191, 191, 191);
+  }
+
+  .highlight .gi {
+    color: rgb(191, 191, 191);
+    background-color: rgb(17, 69, 17);
+  }
+
+  .highlight .go {
+    color: rgb(191, 191, 191);
+  }
+
+  .highlight .gp {
+    color: rgb(191, 191, 191);
+  }
+
+  .highlight .gu {
+    color: rgb(191, 191, 191);
+  }
+
+  .highlight .gt {
+    color: rgb(230, 153, 153);
+  }
+
+  .highlight .kc {
+    color: rgb(191, 191, 191);
+  }
+
+  .highlight .kd {
+    color: rgb(191, 191, 191);
+  }
+
+  .highlight .kn {
+    color: rgb(191, 191, 191);
+  }
+
+  .highlight .kp {
+    color: rgb(191, 191, 191);
+  }
+
+  .highlight .kr {
+    color: rgb(191, 191, 191);
+  }
+
+  .highlight .kt {
+    color: rgb(170, 181, 212);
+  }
+
+  .highlight .k,
+  .highlight .kv {
+    color: rgb(191, 191, 191);
+  }
+
+  .highlight .mf {
+    color: rgb(153, 230, 230);
+  }
+
+  .highlight .mh {
+    color: rgb(153, 230, 230);
+  }
+
+  .highlight .il {
+    color: rgb(153, 230, 230);
+  }
+
+  .highlight .mi {
+    color: rgb(153, 230, 230);
+  }
+
+  .highlight .mo {
+    color: rgb(153, 230, 230);
+  }
+
+  .highlight .m,
+  .highlight .mb,
+  .highlight .mx {
+    color: rgb(153, 230, 230);
+  }
+
+  .highlight .sb {
+    color: rgb(230, 153, 172);
+  }
+
+  .highlight .sc {
+    color: rgb(230, 153, 172);
+  }
+
+  .highlight .sd {
+    color: rgb(230, 153, 172);
+  }
+
+  .highlight .s2 {
+    color: rgb(230, 153, 172);
+  }
+
+  .highlight .se {
+    color: rgb(230, 153, 172);
+  }
+
+  .highlight .sh {
+    color: rgb(230, 153, 172);
+  }
+
+  .highlight .si {
+    color: rgb(230, 153, 172);
+  }
+
+  .highlight .sx {
+    color: rgb(230, 153, 172);
+  }
+
+  .highlight .sr {
+    color: rgb(153, 230, 172);
+  }
+
+  .highlight .s1 {
+    color: rgb(230, 153, 172);
+  }
+
+  .highlight .ss {
+    color: rgb(230, 153, 210);
+  }
+
+  .highlight .s {
+    color: rgb(230, 153, 172);
+  }
+
+  .highlight .na {
+    color: rgb(153, 230, 230);
+  }
+
+  .highlight .bp {
+    color: rgb(191, 191, 191);
+  }
+
+  .highlight .nb {
+    color: rgb(153, 210, 230);
+  }
+
+  .highlight .nc {
+    color: rgb(170, 181, 212);
+  }
+
+  .highlight .no {
+    color: rgb(153, 230, 230);
+  }
+
+  .highlight .nd {
+    color: rgb(177, 205, 205);
+  }
+
+  .highlight .ni {
+    color: rgb(230, 153, 230);
+  }
+
+  .highlight .ne {
+    color: rgb(230, 153, 153);
+  }
+
+  .highlight .nf {
+    color: rgb(230, 153, 153);
+  }
+
+  .highlight .nl {
+    color: rgb(230, 153, 153);
+  }
+
+  .highlight .nn {
+    color: rgb(191, 191, 191);
+  }
+
+  .highlight .nt {
+    color: rgb(153, 153, 230);
+  }
+
+  .highlight .vc {
+    color: rgb(153, 230, 230);
+  }
+
+  .highlight .vg {
+    color: rgb(153, 230, 230);
+  }
+
+  .highlight .vi {
+    color: rgb(153, 230, 230);
+  }
+
+  .highlight .nv {
+    color: rgb(153, 230, 230);
+  }
+
+  .highlight .ow {
+    color: rgb(191, 191, 191);
+  }
+
+  .highlight .o {
+    color: rgb(191, 191, 191);
+  }
+
+  .highlight .w {
+    color: rgb(191, 191, 191);
+  }
+
+  .highlight {
+    background-color: rgb(33, 33, 33);
+  }
 }
